--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,15 @@
 fastapi==0.70.0
-joblib==0.17.0
-pandas==1.1.3
+joblib==1.1.0
+pandas==1.3.4
 pydantic==1.8.2
 uvicorn==0.15.0
 imblearn==0.0
 lightgbm==3.3.1
 sklearn==0.0
+scikit-learn==1.0.1
 gunicorn==20.1.0
+shap==0.40.0
+image==1.5.33
+matplotlib==3.5.0
+numpy==1.21.4
+seaborn==0.11.2
